# nosql-2017-chess_is

./: Model.md  Use case.md  Пояснительная.docx
CMakeChess/: CMakeLists.txt
CMakeChess/Forms/: mainwindow.ui
CMakeChess/Headers/: board.h  boardvision.h  controller.h  db.h  mainwindow.h  pieces.h  player.h  tile.h  ui_mainwindow.h
CMakeChess/Sources/: board.cpp  boardvision.cpp  controller.cpp  main.cpp  mainwindow.cpp  pieces.cpp  player.cpp  tile.cpp
